--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build && pnpm postbuild",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind"
   },
   "dependencies": {
-    "next": "15.4.4",
-    "nextra": "^4.2.17",
-    "nextra-theme-docs": "^4.2.17",
+    "next": "^16.1.0",
+    "nextra": "^4.6.1",
+    "nextra-theme-docs": "^4.6.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -23,7 +23,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.4",
+    "eslint-config-next": "^16.1.0",
     "pagefind": "^1.3.0",
     "tailwindcss": "^4",
     "typescript": "^5"
